qsk-macros/tests/fail/exit-uexpected-arguments.stderr
error: unexpected argument
 --> tests/fail/exit-uexpected-arguments.rs:6:23
  |
6 |             F -> Exit(MEOW),
  |                       ^^^^
